Add terraform container definition

--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,9 @@ docker/localstack/server.test.pem.key
 
 # aws-cli
 .aws/
+
+# terraform
+terraform/.terraform/
+terraform/.terraform.lock.hcl
+terraform/terraform.tfstate
+terraform/terraform.tfstate.backup
